Modified build.gradle to point main class at test interface.

--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,7 @@ jar {
 
     manifest {
         attributes 'Manifest-Version': "$jar.version"
+        attributes 'Main-Class': "org.javarosa.xform_test.XformTest"
     }
 }
 
