--- a/build.gradle
+++ b/build.gradle
@@ -35,14 +35,25 @@ compileTestJava {
 targetCompatibility = '1.8'
 sourceCompatibility = '1.8'
 
+configurations {
+    // https://discuss.gradle.org/t/how-to-include-dependencies-in-jar/19571/5
+    // configuration that holds jars to include in the jar
+    extraLibs
+}
+
 dependencies {
     // Be sure to update dependencies in pom.xml to match
     compile group: 'joda-time', name: 'joda-time', version: '2.9.9'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    extraLibs group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    extraLibs group: 'net.sf.kxml', name: 'kxml2', version: '2.3.0'
+    extraLibs group: 'joda-time', name: 'joda-time', version: '2.9.9'
+    extraLibs group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     compileOnly group: 'net.sf.kxml', name: 'kxml2', version: '2.3.0'
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'net.sf.kxml', name: 'kxml2', version: '2.3.0'
+    configurations.compile.extendsFrom(configurations.extraLibs)
 }
 
 jacocoTestReport {
@@ -56,6 +67,8 @@ checkstyle {
     toolVersion = '7.6.1' 
 }
 
+
+
 jar {
     baseName = 'opendatakit-javarosa'
     // Be sure to update version in pom.xml to match
@@ -66,7 +79,10 @@ jar {
 
     manifest {
         attributes 'Manifest-Version': "$jar.version"
-        attributes 'Main-Class': "org.javarosa.xform_test.XformTest"
+        attributes 'Main-Class': "org.javarosa.xform_test.XFormTest"
+    }
+    from {
+        configurations.extraLibs.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
 
