--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ sourceSets {
         java {
             srcDirs = ['src']
         }
+        resources {
+            srcDirs = ['res']
+        }
     }
     test {
         java {
